<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="presenter"
            type="br.com.edsilfer.android.starwarswiki.presenter.contracts.HomepagePresenterContract" />
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/coordinator_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ffffff"
            android:orientation="vertical">

            <android.support.design.widget.AppBarLayout
                android:id="@+id/app_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:theme="@style/ThemeOverlay.AppCompat.Dark"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/AppTheme.PopupOverlay" />
            </android.support.design.widget.AppBarLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/characters"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/app_bar" />

            <br.com.edsilfer.android.starwarswiki.view.layout.LoadingCollectionFeedback
                android:id="@+id/collection_loading_feedback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                app:collectionName="@string/str_commons_characters_requests"
                app:image="@drawable/ic_no_friends" />

            <com.github.clans.fab.FloatingActionMenu
                android:id="@+id/fab_menu"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom|end"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                app:menu_animationDelayPerItem="50"
                app:menu_colorNormal="#3C71AA"
                app:menu_colorPressed="#3C71AA"
                app:menu_labels_singleLine="true">

                <com.github.clans.fab.FloatingActionButton
                    android:id="@+id/search_by_qr_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{presenter::searchByQrCode}"
                    android:src="@drawable/ic_qrcode"
                    app:fab_colorNormal="#3C71AA"
                    app:fab_colorPressed="#3C71AA"
                    app:fab_hideAnimation="@anim/fab_scale_down"
                    app:fab_label="Search by qr code"
                    app:fab_size="mini" />

                <com.github.clans.fab.FloatingActionButton
                    android:id="@+id/search_by_url"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{presenter::searchByUrl}"
                    android:src="@drawable/ic_url"
                    app:fab_colorNormal="#3C71AA"
                    app:fab_colorPressed="#3C71AA"
                    app:fab_hideAnimation="@anim/fab_scale_down"
                    app:fab_label="Search by url"
                    app:fab_size="mini" />
            </com.github.clans.fab.FloatingActionMenu>


            <!--<android.support.design.widget.FloatingActionButton
                android:id="@+id/add_game"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_margin="16dip"
                android:clickable="true"
                android:onClick="@{presenter::searchByQrCode}"
                app:backgroundTint="@color/colorAccent"
                app:borderWidth="0dp"
                app:elevation="2dp"
                app:fabSize="normal"
                app:srcCompat="@drawable/ic_plus" />-->
        </RelativeLayout>
    </android.support.design.widget.CoordinatorLayout>
</layout>