<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/wrapper"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/selectableItemBackground">

    <android.support.v7.widget.CardView
        android:id="@+id/image_wrapper"
...

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-thin"
            android:text="Luke Skywalker"
            android:textColor="#000000"
            android:textSize="@dimen/textH1"
            android:textStyle="bold" />


        <LinearLayout
...
