<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:fitsSystemWindows="true">

    <ImageView
        android:id="@+id/splash_logo"
        android:layout_width="200dip"
        android:layout_height="200dip"
        android:layout_centerInParent="true"
        app:srcCompat="@drawable/ic_splash_image" />

</RelativeLayout>
